# UltraVNC

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
DSMPlugin/: DSMPlugin.cpp
OutputFiles/IntermediaryFiles/Debug/: RCa13392  UltraVncAx_manifest.rc
UltraVncAx/: CMakeLists.txt  StdAfx.h  UltraVncAx.cpp  UltraVncAx.def  UltraVncAx.dsp  UltraVncAx.h  UltraVncAx.idl  UltraVncAx.rc  UltraVncAx.sln  UltraVncAx.tlb  UltraVncAx.vcxproj  UltraVncAx.vcxproj.filters  UltraVncAxCP.h  UltraVncAxGlobalConstructor.cpp  UltraVncAxGlobalConstructor.h  UltraVncAxObj - Copy.htm  UltraVncAxObj.cpp  UltraVncAxObj.h  UltraVncAxObj.htm  UltraVncAxObj.rgs  UltraVncAx_i.c  UltraVncAx_p.c  UltraVncAxps.def  UltraVncAxps.mk  dlldata.c  resource.h
UltraVncAx/Debug/: UltraVncAx.exp
UltraVncAxTest/: ArgumentBuilder.cs  CMakeLists.txt  Form1.Designer.cs  Form1.cs  Program.cs  UVNCaxHost.cs  UltraVncAxTest.csproj  UltraVncAxText.csproj  UltraVncAxText.sln
UltraVncAxTest/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
cmake/: ConanHelper.cmake
vncviewer/: AboutBox.cpp  AboutBox.h  AuthDialog.cpp  AuthDialog.h  ClientConnection.cpp  ClientConnection.h  ClientConnectionFullScreen.cpp  FileTransfer.cpp  FileTransfer.h  TextChat.cpp  TextChat.h  VNCviewerApp.cpp  VNCviewerApp32.cpp  vncviewer.cpp  vncviewer_vs2017.sln
vncviewer/omnithread/: omnithread_VC2017.vcxproj
zipunzip_src/zip20/windll/: windll.c
zipunzip_src/zip20/windll/visualc/lib/: zip32v12.vcxproj
zstd/: CMakeLists.txt
